<resources>
    <string name="app_name">Quizzy</string>
    <string name="app_name_upper">QUIZZY</string>
    <string name="textfield_label">Username</string>
    <string name="demo_card_text">Simple Catd</string>
    <string name="hint_username">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_signin_button">Sign In</string>
    <string name="text_donthaveanaccount">Do not have an account?</string>
    <string name="text_signup">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="text_fill_info">Please fill the information</string>
    <string name="hint_signup_username">Enter your username</string>
    <string name="hint_signup_password">Enter your password</string>
    <string name="hint_signup_password_confirm">Password confirm</string>
    <string name="hint_signup_mail">Enter your e-mail address</string>
    <string name="text_sign_me_up">sign me up!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Groups</string>
    <string name="card_title">Problem Solvers</string>
    <string name="card_content">Brute force it, then optimize it!</string>
    <string name="unelevated_button_label_enabled">go there</string>
    <string name="unelevated_button_label_enabled2">leave group</string>
    <string name="text_create_group">create group</string>
    <string name="text_step1">Step 1. Choose your group name</string>
    <string name="hint_group_name">Choose your group name</string>
    <string name="hint_add_member">Enter member\'s username</string>
    <string name="text_step2">Step 2. Add members</string>
    <string name="text_add">Add</string>
    <string name="text_step3">Step 3. Confirm information</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
</resources>
