<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="signUpViewModel"
            type="khosbayar.com.quizzy.viewmodels.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.SignUpActivity">

        <TextView
            android:id="@+id/tv_fill_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:text="@string/text_fill_info"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/baseline_person_white_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fill_info" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            app:layout_constraintBottom_toBottomOf="@+id/iv_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toTopOf="@+id/iv_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup__username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_username"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:text="@{signUpViewModel.username}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/baseline_mail_white_24"
            app:layout_constraintStart_toStartOf="@+id/iv_username"
            app:layout_constraintTop_toBottomOf="@+id/iv_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            app:layout_constraintBottom_toBottomOf="@+id/iv_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_mail"
            app:layout_constraintTop_toTopOf="@+id/iv_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:text="@{signUpViewModel.email}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/baseline_lock_white_24"
            app:layout_constraintStart_toStartOf="@+id/iv_mail"
            app:layout_constraintTop_toBottomOf="@+id/iv_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            app:layout_constraintBottom_toBottomOf="@+id/iv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_password"
            app:layout_constraintTop_toTopOf="@+id/iv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:text="@{signUpViewModel.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_password_confirm"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/baseline_lock_white_24"
            app:layout_constraintStart_toStartOf="@+id/iv_password"
            app:layout_constraintTop_toBottomOf="@+id/iv_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            app:layout_constraintBottom_toBottomOf="@+id/iv_password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_password_confirm"
            app:layout_constraintTop_toTopOf="@+id/iv_password_confirm">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_password_confirm"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:text="@{signUpViewModel.confirmPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/til_signup_password_confirm"
            android:visibility="@{signUpViewModel.progressBar}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_signup"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_sign_me_up"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{signUpViewModel::onSignUp}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>